# onvif-device

./: Cargo.toml
.github/workflows/: rust.yml
soap-derive/: Cargo.toml
soap-derive/src/: lib.rs
soap-router/: Cargo.toml
soap-router/src/: fault.rs  lib.rs  router.rs
